# realtime-feature-pipeline

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backfill/: backfill.py
common/: config.py  spark.py
docs/: app.js  charts.js  data.js  index.html  style.css
docs/superpowers/plans/: 2026-06-02-realtime-feature-pipeline.md
docs/superpowers/specs/: 2026-06-02-realtime-feature-pipeline-design.md
feature_defs/: feature_spec.py  session_features.py
feature_store/: offline.py  online.py  pit_join.py
generator/: events.py  generate.py
infra/: mlflow.Dockerfile  spark.Dockerfile
monitoring/: consistency.py
realtime_feature_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: export_dashboard_data.py
serving/: app.py  model_loader.py
streaming/: job.py  sinks.py
tests/: conftest.py
tests/integration/: test_backfill.py  test_offline.py  test_serving.py  test_streaming_e2e.py  test_training.py
tests/unit/: test_events.py  test_feature_spec.py  test_make_labels.py  test_online.py  test_pit_join.py  test_session_features.py
training/: make_labels.py  train.py
verify/: skew_check.py
