[project]
name = "realtime-feature-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyspark==3.5.1",
  "delta-spark==3.2.0",
  "kafka-python==2.0.2",
  "redis==5.0.4",
  "lightgbm>=4.3.0",
  "mlflow==2.13.0",
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "boto3==1.34.0",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest==8.2.0", "pytest-timeout==2.3.1", "requests==2.32.0"]

[tool.pytest.ini_options]
markers = ["integration: requires docker-compose stack"]
addopts = "-m 'not integration'"

[tool.setuptools]
packages = ["common", "feature_defs", "feature_store", "generator", "streaming", "training", "serving", "backfill", "verify", "monitoring"]

